# dr-markdown

./: .env.example  .gitignore  Cargo.toml  readme.md
backend/: Cargo.toml  documents.db-shm  documents.db-wal
backend/migrations/: 0002_add_theme_to_users.sql  0003_add_share_token.sql  001_initial.sql
backend/src/: auth.rs  config.rs  database.rs  handlers.rs  llm.rs  main.rs  models.rs  routes.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/assets/: input.css  output.css
frontend/src/: api.rs  app.rs  auth.rs  main.rs  models.rs
frontend/src/components/: chat_sidebar.rs  mod.rs  sidebar.rs
frontend/src/pages/: document.rs  home.rs  login.rs  mod.rs  register.rs  shared.rs
