[workspace]
members = ["backend", "frontend"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
